third_party/move/move-compiler-v2/tests/checking/inlining/return.exp

Diagnostics:
error: Return not currently supported in inline functions
  ┌─ tests/checking/inlining/return.move:3:9
  │
3 │         return 5
  │         ^^^^^^^^
